<resources>
    <string name="app_name">Fruity Facts</string>
    <string name="lblFruityFacts">Fruity Facts!</string>
    <string name="lblSelectFruitBy">Select Fruit by</string>
    <string name="btnName">Name</string>
    <string name="btnNutritionalValue">Nutritional Value</string>
    <string name="btnMoreInfo">More Info</string>
    <string name="lblSelectValues">Select nutritional values for fruit per 100g</string>
    <string name="lblCarbs">Carbohydrates</string>
    <string name="lblProtein">Protein</string>
    <string name="lblFat">Fat</string>
    <string name="lblCalories">Calories</string>
    <string name="lblSugar">Sugar</string>
    <string name="btnFindFruit">Find Fruit</string>
    <string name="btnAddFavourite">Favourite</string>
    <string name="btnGoToFavourites">Favourites</string>
    <string name="range">Range: </string>
</resources>